--- a/style.css
+++ b/style.css
@@ -4,38 +4,32 @@ body {
 }
 .firstSection {
   display: flex;
-  align-content: space-between;
-  margin: 30px 20px;
-}
-.rightSide {
-  width: 50%;
-}
-.leftSide {
-  width: 50%;
+  width: 80%;
+  margin: 0 auto;
 }
 
-.rightTop {
-  border-left: 4px solid;
-  border-color: tomato;
+.photo img {
+  width: 330px;
 }
-.rightTop span {
-  color: rgb(98, 211, 64);
+.stayFocus {
+  border-left: solid greenyellow;
 }
-.rightButton button {
+.stayFocus span {
+  color: firebrick;
+}
+.paragraph {
+  padding-right: 5px;
+  padding-left: 5px;
+  text-align: justify;
+}
+
+.explore-btn button {
+  padding: 10px 25px;
   border-radius: 5px;
-  padding: 10px 20px;
-  background-color: black;
+  background-color: cornflowerblue;
 }
-.rightButton a {
+.explore-btn button a {
+  color: whitesmoke;
   text-decoration: none;
-  color: antiquewhite;
-  width: 400;
-}
-
-.rightButton button:hover {
-  background-color: tomato;
-  cursor: pointer;
-}
-.leftIamges img {
-  width: 40%;
+  font-weight: 700;
 }
