--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
   width: 330px;
 }
 .stayFocus {
-  border-left: solid greenyellow;
+  border-left: solid tomato;
 }
 .stayFocus span {
   color: firebrick;
@@ -24,12 +24,16 @@ body {
 }
 
 .explore-btn button {
-  padding: 10px 25px;
+  padding: 7px 35px;
   border-radius: 5px;
-  background-color: cornflowerblue;
+  background-color: tomato;
 }
 .explore-btn button a {
-  color: whitesmoke;
+  color: black;
   text-decoration: none;
   font-weight: 700;
+}
+.explore-btn button:hover {
+  background-color: firebrick;
+  cursor: pointer;
 }
