--- a/style.css
+++ b/style.css
@@ -22,6 +22,9 @@ body {
   padding-left: 5px;
   text-align: justify;
 }
+.exploreMe {
+  padding-top: 15px;
+}
 
 .explore-btn button {
   padding: 7px 35px;
