--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 .stayFocus {
   border-left: solid tomato;
 }
-.stayFocus span {
+.spClass {
   color: firebrick;
 }
 .paragraph {
@@ -51,9 +51,6 @@ body {
   margin-top: 10px;
   text-align: center;
 }
-.mymission span {
-  color: firebrick;
-}
 .mission {
   width: 320px;
   border-radius: 15px;
@@ -79,7 +76,7 @@ body {
   margin: 0 auto;
   margin-top: 25px;
   margin-bottom: 35px;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 .missionContent {
   padding: 10px 15px;
@@ -127,4 +124,14 @@ body {
 .fourSectionLeft {
   margin-top: 80px;
   margin-left: 40px;
+}
+/* footer part  start*/
+footer {
+  margin-top: 100px;
+  background-color: black;
+  border: 40px solid black;
+}
+.footerClass {
+  text-align: center;
+  color: white;
 }
